fix missing subscription ID in globals for tibco.

--- a/charts/bwprovisioner/values.yaml
+++ b/charts/bwprovisioner/values.yaml
@@ -7,6 +7,8 @@
 # Declare variables to be passed into your templates.
 
 global:
+  tibco:
+    subscriptionId: "sub1"
   cic:
     data:
       SYSTEM_WHERE: "local"
