--- a/charts/o11y-service/values.yaml
+++ b/charts/o11y-service/values.yaml
@@ -8,6 +8,8 @@
 # Declare variables to be passed into your templates.
 
 global:
+  tibco:
+    subscriptionId: "sub1"
   cp:
     dataplaneId: dp-dp1
     instanceId: defaultinstid
