--- a/charts/bwprovisioner/templates/ingress.yaml
+++ b/charts/bwprovisioner/templates/ingress.yaml
@@ -46,12 +46,7 @@ spec:
   {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
-    {{- if .host }}
-    - host: {{ .host | quote }}
-      http:
-    {{- else }}
-    - http:
-    {{- end }}
+      http: "cpdpproxy"
         {{- if $.Values.ingress.hostsOverride -}}
         paths:
           {{- range .paths }}
