fix host defintion for ingress for bwprovisioner and artifactmanager

--- a/charts/artifactmanager/templates/ingress.yaml
+++ b/charts/artifactmanager/templates/ingress.yaml
@@ -46,7 +46,8 @@ spec:
   {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
-      http: "cpdpproxy"
+    - host: "cpdpproxy"
+      http:
         {{- if $.Values.ingress.hostsOverride -}}
         paths:
           {{- range .paths }}
