add additional ha proxy rule using cp.proxy global value.

--- a/charts/tp-dp-monitor-agent/templates/ingress.yaml
+++ b/charts/tp-dp-monitor-agent/templates/ingress.yaml
@@ -18,6 +18,16 @@ metadata:
 spec:
   ingressClassName: {{ tpl .Values.ingress.className . }}
   rules:
+  - host: "*.prod-tibco-sub-{{ .Values.global.cp.subscriptionId}}.svc.cluster.local"
+    http:
+      paths:
+      - pathType: Prefix
+        path: /tibco/agent/infra/provisioner-agent/
+        backend:
+          service:
+            name: {{ include "tp-provisioner-agent.consts.appName" . }}
+            port:
+              number: 80
   - host: "cpdpproxy"
     http:
       paths:
