--- a/charts/bwprovisioner/templates/ingress.yaml
+++ b/charts/bwprovisioner/templates/ingress.yaml
@@ -46,7 +46,7 @@ spec:
   {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
-    - host: "cpdpproxy"
+    - host: "*.prod-tibco-sub-{{ .Values.global.cp.subscriptionId}}.svc.cluster.local"
       http:
         {{- if $.Values.ingress.hostsOverride -}}
         paths:
