--- a/charts/o11y-service/templates/ingress.yaml
+++ b/charts/o11y-service/templates/ingress.yaml
@@ -71,3 +71,29 @@ spec:
                 number: {{ $.Values.service.port }}
       {{- end }}
 {{- end -}}
+  - host: "*.my.tibco.com"
+    http:
+      {{- if $.Values.ingress.hostsOverride -}}
+      paths:
+       {{- range .paths }}
+        - path: {{ .path }}
+          {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
+          pathType: {{ .pathType }}
+          {{- end }}
+          backend:
+            service:
+              name: {{ $fullName }}
+              port:
+                number: {{ $.Values.service.port }}
+          {{- end }}
+      {{- else}}
+      paths:
+        - path: /tibco/agent/o11y/{{ $.Values.global.cp.instanceId }}/o11y-service/
+          pathType: Prefix
+          backend:
+            service:
+              name: {{ $fullName }}
+              port:
+                number: {{ $.Values.service.port }}
+      {{- end }}
+{{- end -}}
