--- a/charts/bwprovisioner/templates/ingress.yaml
+++ b/charts/bwprovisioner/templates/ingress.yaml
@@ -70,7 +70,7 @@ spec:
                 port:
                   number: {{ $.Values.service.port }}
         {{- end }}
-    - host: "*.my.tibco.com"
+    - host: "*.eu-west.my.tibco.com"
       http:
         {{- if $.Values.ingress.hostsOverride -}}
         paths:
