--- a/charts/o11y-service/templates/ingress.yaml
+++ b/charts/o11y-service/templates/ingress.yaml
@@ -69,9 +69,7 @@ spec:
               name: {{ $fullName }}
               port:
                 number: {{ $.Values.service.port }}
-      {{- end }}
-{{- end -}}
-  - host: "*.my.tibco.com"
+  - host: "*.eu-west.my.tibco.com"
     http:
       {{- if $.Values.ingress.hostsOverride -}}
       paths:
