--- a/charts/o11y-service/templates/ingress.yaml
+++ b/charts/o11y-service/templates/ingress.yaml
@@ -69,6 +69,7 @@ spec:
               name: {{ $fullName }}
               port:
                 number: {{ $.Values.service.port }}
+      {{- end }}
   - host: "*.eu-west.my.tibco.com"
     http:
       {{- if $.Values.ingress.hostsOverride -}}
@@ -95,4 +96,3 @@ spec:
                 number: {{ $.Values.service.port }}
       {{- end }}
 {{- end -}}
-
